started working on the nav bar for 768px or less devices

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -17,7 +17,8 @@
   </head>
 
   <body>
-    <nav>
+    <div class="nav-bar">
+      <nav>
       <img src="./images/slack-logo.png" alt="slack_logo" />
       <ul>
         <li>Why Slack?</li>
@@ -26,6 +27,8 @@
         <li>Your Workspaces</li>
       </ul>
     </nav>
+    </div>
+    
     <header>
       <img src="./images/home_talking.png" alt="home_work_happening" />
       <h1>Where Work Happens</h1>
